# auth_api

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: merge-ci.yml
.history/src/core/: response_20231016204117.rs  response_20240708004231.rs  response_20240708004301.rs
.history/src/features/email/: mail_controller_20231122100812.rs  mail_controller_20240708004947.rs
migrations/2023-09-22-134241_create_user_table/: down.sql  up.sql
migrations/2023-09-23-081439_create_user_table/: up.sql
migrations/2023-09-25-121555_create_login_history_table/: down.sql  up.sql
src/: constants.rs  error.rs  main.rs  private.pem  schema.rs
src/api/: account_controller.rs  health_checker.rs  mod.rs  users_controller.rs
src/config/: app.rs  db.rs  mod.rs
src/core/: constants.rs  error.rs  injection.rs  mod.rs  response.rs  types.rs
src/core/config/: db.rs  di.rs  di_container.rs  mod.rs  routes.rs  server.rs  state.rs
src/core/middlewares/: auth.rs  cors.rs  general.rs  mod.rs  state.rs
src/errors/: user.rs
src/features/: mod.rs
src/features/auth/: auth_controller.rs  mod.rs  routes.rs
src/features/auth/data/models/: auth_token.rs  general_token.rs  login_history.rs  login_info.rs  mod.rs
src/features/auth/data/repository/: auth.rs  auth_repository_impl.rs  mod.rs
src/features/auth/domain/: mod.rs
src/features/auth/domain/entity/: auth.rs  auth_response.rs  mod.rs
src/features/auth/domain/repository/: auth.rs  auth_repository.rs  mod.rs
src/features/auth/domain/usecase/: dto.rs  interface.rs  service.rs
src/features/auth/domain/usecases/: auth_login.rs  dto.rs  general_token.rs  interface.rs  login.rs  login_session.rs  logout.rs  mod.rs  service.rs  update_password.rs
src/features/email/: mail_controller.rs  mod.rs
src/features/email/data/models/: auth_token.rs  general_token.rs  login_history.rs  mod.rs
src/features/email/data/repository/: email.rs
src/features/email/domain/entity/: auth.rs
src/features/email/domain/repository/: email.rs
src/features/email/domain/usecase/: dto.rs  interface.rs  service.rs
src/features/general/: general_controller.rs  mod.rs  routes.rs
src/features/general/domain/usecase/: dto.rs  mail_sender.rs  mod.rs
src/features/user/: mod.rs  routes.rs  user_controller.rs
src/features/user/data/: mod.rs
src/features/user/data/models/: user.rs
src/features/user/data/repository/: mod.rs  user.rs  user_repository_impl.rs
src/features/user/domain/: mod.rs
src/features/user/domain/entity/: mod.rs  user.rs  user_response.rs
src/features/user/domain/repository/: user.rs  user_repository.rs
src/features/user/domain/usecase/: delete_user.rs  (+7 more)
src/models/: jwt.rs  login_history.rs  mod.rs  response.rs  user.rs
src/services/: account_service.rs  mod.rs
src/utils/: handler.rs  health_checker.rs  macros.rs  mail_sender.rs  mod.rs  token_helper.rs  token_utils.rs
