[package]
name = "auth_api"
version = "0.1.0"
authors = ["Lzyct <hey.mudassir@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
actix-rt = "2.9.0"
async-trait = "0.1.73"
serde_json = "1.0.107"
env_logger = "0.10.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
jsonwebtoken = "8.3.0"
base64 = "0.21.4"
rand = "0.8.5"
derive_more = "0.99.17"
futures-util = "0.3.28"
cargo-watch = "8.4.1"
diesel_migrations = "2.1.0"
bcrypt = "0.15.0"

[dependencies.diesel]
version = "2.1.1"
features = ["postgres", "r2d2", "uuid", "chrono"]

[dependencies.serde]
version = "1.0.188"
features = ["derive"]

[dependencies.chrono]
version = "0.4.31"
features = ["serde"]

[dependencies.uuid]
version = "1.4.1"
features = ["serde", "v4"]

[dependencies.validator]
version = "0.16.1"
features = ["derive"]